# Pyweek35

./: .gitignore  .pre-commit-config.yaml  __main__.py  pyproject.toml
.github/workflows/: format_and_lint.yml
src/: __main__.py  config.py  utils.py
src/utils/: __init__.py  constants.py  enums.py  models.py
src/window/: __init__.py  views.py  window.py
