[tool.poetry]
name = "pyweek35"
version = "0.1.0"
description = ""
authors = ["FallenDeity mudkipdev sarthhh Pegaa Snipy7374"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arcade = "3.0.0.dev18"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.300"
isort = "^5.12.0"
black = "^23.1.0"
ruff = "^0.0.263"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = 3.11
strict = true
pretty = true
install_types = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportImportCycles = true
reportUnusedImport = true
reportPrivateUsage = true
reportPrivateImportUsage = false
reportUnknownVariableType = true
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = true
reportMissingParameterType = false
